# obfusca-0

./: .gitignore  README.md
backend/: CMakeLists.txt  Makefile  main.py  obfuscate.py  run_advanced_obfuscation.py
backend/src/: AdvancedObfuscationPlugin.cpp  AntiDebugging.cpp  BasicBlockSplit.cpp  BogusInstructionsPass.cpp  ControlFlowFlattening.cpp  DynamicXORPass.cpp  OpaquePredicates.cpp  RenameSymbolsPass.cpp  StringEncryptPass.cpp
frontend/: index.html
test/: complex_test.c  simple_test.c
